--- a/GustaStyle.css
+++ b/GustaStyle.css
@@ -24,14 +24,15 @@ header {
 }
 
 header button{
-    width: 10em;
+    width: 9.8em;
     height: 2.3em;
     background-color: #B19669;
     color: white;
-    border-radius: 5%;
+    border-radius: 10%;
     border-color: #08312A;
     font-size: 0.9em;
     padding: 1.1rem;
+    border-bottom-color: #08312A;
     display: flex;
     align-items: center;
     justify-content: center;
